--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 chromadb==0.4.15
-langchain
-sentence_transformers
-streamlit
-openai
-flashtext
-tiktoken
-langchain_openai
-rank_bm25
-langchain_experimental
-langchain-cohere
-pysqlite3-binary
-openpyxl
+langchain==0.1.17
+sentence-transformers==2.7.0
+streamlit==1.34.0
+openai==1.26.0
+flashtext==2.7
+tiktoken==0.6.0
+langchain-openai==0.1.6
+rank_bm25==0.2.2
+langchain_experimental==0.0.57
+langchain-cohere==0.1.4
+pysqlite3-binary==0.5.2.post3
+openpyxl==3.1.2
